Changed my phone number
A paranoid drunk commit

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Yassin Sassi | Designer</title>
+    <title>Yassin Sassi | Developer | Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='//fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -32,7 +32,7 @@
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:+49015736115165">(+49)015736115165</a></li>
+          <li class="phone"><p>Contact me via email for my phone number</p></li>
           <li class="mail"><a href="mailto:we.yassin@gmail.com">we.yassin@gmail.com</a></li>
           <li class="twitter"><a href="https://twitter.com/intent/tweet?screen_name=Yassin_Sassi">@Yassin_Sassi</a></li>
         </ul>
